Many fixes, beta day 1, maybe key.Trim() is not good idea

--- a/MultiLanguage/languages/RU/dictionaries/Dialogues.json
+++ b/MultiLanguage/languages/RU/dictionaries/Dialogues.json
@@ -1162,7 +1162,7 @@
     "The most exotic place I've been is Zuzu city.": "Самое экзотическое место, которое я видела - это город Зузу.",
     "*sigh*...": "*вздох*...",
     "NO!! I'm not going to do it!": "Нет!! Я не собираюсь делать это!",
-    "You guys are both stupid!": "Вы парни оба идиоты!",
+    "You guys are both stupid!": "Вы оба такие тупые.",
     "She should take the 'high road'? What's that supposed to mean?": "Она должна взять на себя \"большую дорогу\"? Что это должно означать?",
     "You think I'm being a baby, huh?": "Ты думаешь, что я ребенок, да?",
     "Great, then you shouldn't have any problem opening this jar for me!": "Отлично, тебе должно быть не сложно, открыть эту банку для меня!",
@@ -1261,7 +1261,7 @@
     "Hi. Do you need something from me?": "Привет. Тебе что-то нужно от меня?",
     "...": "...",
     "Hmm. What brand is your shirt?": "Хм. Какой марки твоя рубашка?",
-    "Oh. Um, nevermind.": "Ох. Хм, по фигу.",
+    "Oh. Um, nevermind.": "Ох. Хотя, это не важно.",
     "I wish someone would bring me a peppermint coffee.": "Вот бы кто-нибудь принес мне мятный кофе.",
     "Don't even bother, I know you won't be able to make one.": "Не беспокойся, я знаю, ты не в состоянии сделать это.",
     "I'm going to start writing a list of all the clothes I need for next spring.": "Я собираюсь начать писать список всей одежды, которая будет нужна весной следующего года.",
@@ -1295,8 +1295,8 @@
     "Oh! You're that new farmer girl, or whatever. Aren't you?": "О, ты - та новая девочка фермер, разве нет?",
     "Huh? Oh... I'm Haley.": "Да? Ох... я Хейли.",
     "Later.": "Увидимся позже.",
-    "Teddy bears are so cute!<": "Плюшевые мишки настолько милые!<",
-    "*giggle*": "*хихикайте*",
+    "Teddy bears are so cute!<": "Плюшевые мишки такие милые!<",
+    "*giggle*": "*хихикает*",
     "This town is so small. It sucks.": "Этот город настолько маленький. Это отстой.",
     "I have to drive, like, twenty miles to buy any decent clothes.": "Я должна проехать двадцать миль, чтобы купить хоть какую-нибудь приличную одежду.",
     "That's why I usually just order online.": "Поэтому я обычно заказываю онлайн.",
@@ -1342,7 +1342,7 @@
     "If it was much bigger it wouldn't feel like a community.": "Если бы он был намного больше, то не был бы таким дружным.",
     "I cooked dinner last night. It actually turned out okay!": "Я приготовила ужин вчера вечером. Это оказалось не так плохо!",
     "But I did make a huge mess in the kitchen...": "Но я устроила огромный беспорядок на кухне...",
-    "Do you ever go to Gus' salloon? My sister works there.": "Ты ходишь в Gus' salloon? Моя сестра работает там.",
+    "Do you ever go to Gus' salloon? My sister works there.": "Ты ходишь в бар Гаса? Моя сестра работает там.",
     "It's the only place that's open late.": "Это единственное место, которое открыто допоздна.",
     "I was at the beach the other day, and I found a seagull with her wings caught in a plastic net.": "Я была на пляже на днях, и я нашла чайку пойманную в пластмассовую сеть.",
     "I set her free.": "Я освободила ее.",
@@ -1352,7 +1352,7 @@
     "Hmmmmm...": "Хмммм...",
     "Alright, you win. I guess this can be my job every week. Then there won't be any reason to argue over it.": "Хорошо, ты победил. Я думаю это может быть моей еженедельной работой.Тогда не будет никаких оснований для ссор.^Хорошо, ты победила. Я думаю это может быть моей еженедельной работой.Тогда не будет никаких оснований для ссор.",
     "NO!! I'm not going to do it!": "Нет!! Я не собираюсь делать это!",
-    "You guys are both stupid!": "Вы парни все идиоты.",
+    "You guys are both stupid!": "Вы оба такие тупые.",
     "She should take the 'high road'? What's that supposed to mean?": "Она должна взять на себя \"большую дорогу\"? Что это должно означать?",
     "You think I'm being a baby, huh?": "Ты думаешь, что я ребенок, да?",
     "Great, then you shouldn't have any problem opening this jar for me!": "Отлично, тебе должно быть не сложно, открыть эту банку для меня!",
@@ -1401,7 +1401,7 @@
     "Hmmmmm...": "Хмммм...",
     "Alright, you win. I guess this can be my job every week. Then there won't be any reason to argue over it.": "Хорошо, ты победил. Я думаю это может быть моей еженедельной работой.Тогда не будет никаких оснований для ссор.^Хорошо, ты победила. Я думаю это может быть моей еженедельной работой.Тогда не будет никаких оснований для ссор.",
     "NO!! I'm not going to do it!": "Нет!! Я не собираюсь делать это!",
-    "You guys are both stupid!": "Вы парни все идиоты.",
+    "You guys are both stupid!": "Вы оба такие тупые.",
     "She should take the 'high road'? What's that supposed to mean?": "Она должна взять на себя \"большую дорогу\"? Что это должно означать?",
     "You think I'm being a baby, huh?": "Ты думаешь, что я ребенок, да?",
     "Great, then you shouldn't have any problem opening this jar for me!": "Отлично, тебе должно быть не сложно, открыть эту банку для меня!",
@@ -1415,7 +1415,7 @@
     "Huh? What's an android?": "Ха? Что такое андроид?",
     "__comment": "winter",
     "Hmm. What brand is your shirt?": "Хм. Какой марки твоя рубашка?",
-    "Oh. Um, nevermind.": "Ох. Хм, по фигу.",
+    "Oh. Um, nevermind.": "Ох. Хотя, неважно.",
     "I want to move somewhere warmer.": "Я хочу переехать туда, где потеплее.",
     "Hi. Do you need something from me?": "Привет. Тебе что-то нужно от меня?",
     "...": "...",
@@ -1439,7 +1439,7 @@
     "...what?": "... что?",
     "Um, if you see Josh could you tell him I'm busy today?": "Хм, если ты увидишь Джоша, не мог бы ты сказать ему, что сегодня я занята?^Хм, если ты увидишь Джоша, не могла бы ты сказать ему, что сегодня я занята?",
     "Thanks.": "Спасибо.",
-    "I wish it were warmer here in Stardew Valley.": "Я бы хотела, чтобы в Стардью Вэлли было теплее.",
+    "I wish it were warmer here in Stardew Valley.": "Я бы хотела, чтобы в долине Стардью было теплее.",
     "I could move somewhere else, but...": "Я могла бы уехать куда-нибудь еще, но...",
     "Do you think you'll ever have a pony on your farm?": "Как ты думаешь, ты когда-нибудь будешь выращивать пони на своей ферме?",
     "I'm glad you have less work to do in the winter.": "Я рада, что у тебя меньше работы зимой.",
@@ -1450,7 +1450,7 @@
     "Hmmmmm...": "Хмммм...",
     "Alright, you win. I guess this can be my job every week. Then there won't be any reason to argue over it.": "Хорошо, ты победил. Я думаю это может быть моей еженедельной работой.Тогда не будет никаких оснований для ссор.^Хорошо, ты победила. Я думаю это может быть моей еженедельной работой.Тогда не будет никаких оснований для ссор.",
     "NO!! I'm not going to do it!": "Нет!! Я не собираюсь делать это!",
-    "You guys are both stupid!": "Вы парни все идиоты.",
+    "You guys are both stupid!": "Вы оба такие тупые.",
     "She should take the 'high road'? What's that supposed to mean?": "Она должна взять на себя \"большую дорогу\"? Что это должно означать?",
     "You think I'm being a baby, huh?": "Ты думаешь, что я ребенок, да?",
     "Great, then you shouldn't have any problem opening this jar for me!": "Отлично, тебе должно быть не сложно, открыть эту банку для меня!",
@@ -3731,8 +3731,8 @@
     "When we first moved to Pelican Town I would take secret walks to the Wizard's tower. Don't tell Pierre, he has jealousy issues.": "Когда мы впервые приехали в Пеликан Таун, я сделала секретную дорогу к башне Волшебника. Не говори Пьеру, он будет ревновать.",
     "Abigail was born about a year after we moved to Pelican Town. I wonder if she'll ever experience life outside the valley?": "Эбигейл родилась спустя год как мы переехали в Пеликан Таун. Буду ли я рада, если она когда-нибудь уедет из долины?",
     "I've seen wild horesradish in the forest.": "Я видела дикий хрен в лесу.",
-    "Foraging can be a fun way to earn some cash. Or you can use what you find as gifts or food.": "Фуражировка забавный способ, чтобы заработать немного денег. Или ты можешь использовать то, что найдешь в качестве подарков или еды.",
-    "Hi there. Do you have everything you need for the farm?": "Привет. У тебя есть всё что нужно для фермы?",
+    "Foraging can be a fun way to earn some cash. Or you can use what you find as gifts or food.": "Фуражировка - забавный способ, чтобы заработать немного денег. Или ты можешь использовать то, что найдешь в качестве подарков или еды.",
+    "Hi there. Do you have everything you need for the farm?": "Привет. У тебя есть всё, что нужно для фермы?",
     "If not, we might be able to help you out.": "Если нет, то мы можем помочь.",
     "We carry a variety of useful items.": "У нас большой выбор полезных вещей.",
     "Hmmm... I wonder if I can get Pierre to cook dinner tonight.": "Хм... Смогу ли я заставить Пьера приготовить ужин сегодня вечером.",
@@ -4070,7 +4070,7 @@
     "We know a lot about nature thanks to science.": "Мы многое знаем о природе благодаря науке.",
     "But there's always a lot more to learn.": "Но еще многому предстоит научится.",
     "How's the farming business going? It's corn season, isn't it?": "Как идет фермерский бизнес? Сейчас кукурузный сезон, верно?",
-    "I can imagine it being pretty peaceful, working outdoors with plants all day.": "Я могу представить как это прекрасно работать на улице с растениями весь день.",
+    "I can imagine it being pretty peaceful, working outdoors with plants all day.": "Я могу представить, как это прекрасно работать на улице с растениями весь день.",
     "Maru sure spends a lot of time working on those gadgets of hers.": "Мару посвятила много времени работе над этими её приборами.",
     "I'm glad she's so dedicated.": "Я рад, что она такая преданная.",
     "I'm still flabbergasted about Maru's secret robot... was it all a dream?": "Я всё ещё немного изумлён тем роботом, что Мару сделала в секрете от нас... может это всё был лишь сон?",
@@ -4201,7 +4201,7 @@
     "You're not a spy sent by the Shadow People, are you?": "Ты же не шпион, подосланный Людьми Тени, не так ли?",
     "I'm keeping my eye on you.": "Я слежу за тобой.",
     "Most humans fear the unknown... that's why I've hidden my shop here.": "Большинство людей боятся незнакомого...вот почему я спрятал свой магазин здесь.",
-    "Your mining skills prove you're trustworthy.": "Твой навыки горного дела заслуживают доверия."
+    "Your mining skills prove you're trustworthy.": "Твои навыки горного дела заслуживают доверия."
   },
   "Elliott": {
     "__comment": "common",
@@ -4220,9 +4220,9 @@
     "I wish there was more certainty about the future.": "Хотелось бы иметь больше определённости относительно будущего.",
     "I don't want to grow old as a lonely hermit on this beach...": "Не хочу состариться на этом пляже и стать одиноким отшельником...",
     "I can't seem to find the inspiration to begin writing my novel...": "Я не могу найти вдохновение, чтобы начать писать мой роман...",
-    "I've been feeling hopeful lately. Perhaps the weather is changing.": "В последнее время я чувствую себя многообещающе. Наверное, всё благодаря погодным переменам.",
-    "Sometimes I wonder if I might just have an inflated self-image and no real skills...": "Иногда я задумываюсь, что если бы у меня была завышенная самооценка и никаких полезных навыков...",
-    "No, no... I'm not fishing for compliments. Though they are appreciated...": "Нет, нет... Я не напрашиваюсь на комплименты. Хотя, они только приветствуются...",
+    "I've been feeling hopeful lately. Perhaps the weather is changing.": "Я ощущаю надежду в последнее время. Возможно, погода меняется.",
+    "Sometimes I wonder if I might just have an inflated self-image and no real skills...": "Иногда мне интересно, что было бы, если бы я имел завышенную самооценку и никаких полезных умений.",
+    "No, no... I'm not fishing for compliments. Though they are appreciated...": "Нет, нет... Я не напрашиваюсь на комплименты. Тем не менее, я вам признателен...",
     "It's a little lonely out here on the beach... so I apologize if I was ever a little too forward with you when we first met. I was just eager to have a friend.": "На этом пляже немного одиноко... поэтому я прошу прощения, если я был слишком дерзок с вами, когда мы впервые встретились. Я бы просто хотел иметь друга.",
     "Itfeels good to have a close friend like you.": "чувствует себя хорошо, имея такого близкого друга как ты.",
     "Hello, @player.": "Привет, @player.",
@@ -4445,16 +4445,16 @@
   },
   "Emily": {
     "__comment": "common",
-    "Ooh!... I can read it on your face. You're going to love it here in Pelican Town.": "Уух!... По глазам вижу, тебе понравиться Пеликан таун.",
+    "Ooh!... I can read it on your face. You're going to love it here in Pelican Town.": "Уух!... По глазам вижу, тебе понравиться Пеликан Таун.",
     "If you're ever looking for something to do in the evening, stop by the saloon. That's where I work!": "Если заскучаешь, заходи вечером в салун. Я там работаю!",
     "Have I told you Haley and I are sisters? Strange, isn't it?": "Я говорила тебе, Хейли и я сестры? Странно, не правда ли?",
     "I wish Haley would get a job or at least contribute to cooking and cleaning.": "Я хочу, чтобы Хейли устроилась на работу или хотя бы помогала готовить и убираться.",
-    "I think she's hoping to marry someone rich.": "По моему она надеется жениться на богаче.",
+    "I think she's hoping to marry someone rich.": "По-моему, она надеется жениться на богаче.",
     "I have to say, now that Haley's gone I've had a much easier time keeping things in order.": "Должна признать что теперь, когда Хейли ушла жить к тебе, мне стало гораздо проще содержать здесь всё в порядке.",
     "I work part-time at Gus' saloon. It pays the bills.": "Я подрабатываю в салуне Гаса. Это оплачивает мои счета.",
     "I'm just working at Gus' to make ends meet... but my real passion is tailoring.": "Я просто работаю у Гаса, чтобы свести концы с концами... но моя настоящая страсть - пошив.",
     "I made these clothes from scratch.": "Я сделала всю эту одежду с нуля.",
-    "I've heard rumors of rare and powerful magic rings, forged long ago by forgotten civilizations. I'm not sure if it's true or just a fairy tale.": "Я слышала слухи о редких и мощных магических кольцах, выкованные давным-давно забытыми цивилизациями. Я не уверена,это правда или просто сказки.",
+    "I've heard rumors of rare and powerful magic rings, forged long ago by forgotten civilizations. I'm not sure if it's true or just a fairy tale.": "Я слышала слухи о редких и мощных магических кольцах, выкованные давным-давно забытыми цивилизациями. Я не уверена, это правда или просто сказки.",
     "I hope you're farming in a sustainable way. The valley's ecosystem is fragile!": "Надеюсь, что ты занимаешься безопасным сельским хозяйством. В долине хрупкая экосистема!",
     "How do I know? I have a strong gut-feeling!": "Откуда я знаю?Интуиция подсказывает!",
     "Ah, spring. The season of pastels. I actually prefer jewel tones, myself.": "Ах, весна. Светлая пора. Я и сама предпочитаю светлые цвета.",
@@ -4472,7 +4472,7 @@
     "Did you really think so? That's exactly the effect I was shooting for!": "Ты действительно так думаешь? Это именно тот эффект, который я ждала!",
     "I'm so glad you liked it.": "Я так рада, что тебе понравилось.",
     "Haley is a picky eater. It's so hard to cook for her.": "Хэйли придирчивый едок. Трудно готовить для нее.",
-    "Haley and I get along much better now that she's moved out. I look forward to her visits!": "Теперь,когда она съехала, мне куда легче находить общий язык с Хейли. Я даже подумываю навестить её!",
+    "Haley and I get along much better now that she's moved out. I look forward to her visits!": "Теперь, когда она съехала, мне куда легче находить общий язык с Хейли. Я даже подумываю навестить её!",
     "Hello there, @player.": "Привет, @player.",
     "I feel lazy today.": "Не хочу сегодня ничего делать.",
     "Hi, @player! We've become decent friends, haven't we?": "Привет, @player! Мы стали неплохими друзьями, не так ли?",
@@ -6015,7 +6015,7 @@
     "__comment": "common",
     "Hey, kid. The name's Pam.": "Привет, парнишка. Меня зовут Пэм.^Привет, девчушка. Меня зовут Пэм.",
     "Don't be a jerk and we'll get along fine.": "Не будь придурком и мы с тобой поладим.^Не будь дурой и мы с тобой поладим.",
-    "urghh... my head...": "urghh... my head...",
+    "urghh... my head...": "аах... моя голова...",
     "You know, I'd eat healthier food if I could afford it.": "Ты знаешь, я бы питалась только здоровой пищей, если бы могла себе это позволить.",
     "Hey, you probably have a lot of tasty grub growin' on your farm, hm?": "Эй, ты, наверное, выращиваешь много вкусной жратвы на своей ферме, да?",
     "Nothin' like a sip o' the good stuff to warm these old bones...": "Нет ничего лучше, чем глоток хорошей выпивки, согревающей старые кости...",
