--- a/MultiLanguage/languages/RU/dictionaries/Festivals.json
+++ b/MultiLanguage/languages/RU/dictionaries/Festivals.json
@@ -3,7 +3,7 @@
   "Egg Festival": "Яичный фестиваль",
   "Flower Dance": "Цветочный танец",
   "Luau": "Люау",
-  "Dance of the Moonlight Jellies": "Танец \"Лунных медуз",
+  "Dance of the Moonlight Jellies": "Танец \"Лунных медуз\"",
   "Stardew Valley Fair": "Ярмарка Долины Стардью",
   "Spirit's Eve": "Канун Дня Духов",
   "Festival of Ice": "Ледяной праздник",
@@ -67,7 +67,7 @@
   "Moooo!": "Му-у-у!",
   "Clint's blades get sharper every year.": "Кузнечное мастерство Клинта с каждым годом только выше.",
   "So do his prices...": "Как и цены...",
-  "Are you setting up a grange display, @player? It's your chance to show off all the good produce from @farm!": "Ты заполнил свой стенд, @player?^Ты заполнила свой стенд, @player? Это отличная возможность показать продукцию фермы %!",
+  "Are you setting up a grange display, @player? It's your chance to show off all the good produce from @farm!": "Ты заполнил свой стенд, @player? Это отличная возможность показать продукцию @farm фермы!^Ты заполнила свой стенд, @player? Это отличная возможность показать продукцию @farm фермы!",
   "__comment": "fall27",
   "Spirit's Eve": "Канун Дня духов",
   "You'll have to tell me what's beyond, I can't go on... spiders...": "Посмотри, что там дальше... Я не могу... пауки...",
@@ -136,7 +136,7 @@
   "Let the egg hunt begin!": "Объявляю яичную охоту... ОТКРЫТОЙ!",
   "Go away, we're adversaries until the egg hunt is over!": "Иди, пока длиться игра мы противники!",
   "I never had many friends in town, so these events are always kind of boring for me. I enjoy the buffet, though.": "У меня не когда не было много друзей, поэтому такие игры для меня были скучными.Хотя бы есть шведский стол.",
-  "I'm just catching up with Penny. Have you had your fill of eggs?": "Я просто общаюсь с Пенни. У тебя хватило яиц?\n",
+  "I'm just catching up with Penny. Have you had your fill of eggs?": "Я просто общаюсь с Пенни. У тебя хватило яиц?",
   "Maru's trying to convince me to eat a deviled egg. I'm just not sure I can stomach it...": "Мару пытается заставить съесть меня варенные яйца. Я просто не уверен что смогу это съесть...",
   "I was going to eat some eggs, but then I remembered I'm on a spring diet.": "Я собирался поесть яичницу, но потом вспомнил, что я на весенней диете.",
   "I'll be rooting for you in the egg hunt.": "Я буду болеть за тебя, в охоте за яйцами.",
@@ -371,7 +371,7 @@
   "That's a heavy load of people for an ancient wooden dock! I'll stay over here near the beach.": "Слишком много народа на ветхом деревянном пирсе! Я лучше буду поближе к пляжу.",
   "If we keep polluting the oceans, the jellies will surely go extinct. It's already in the process of happening.": "Если мы не перестанем загрязнять океан, медузы просто исчезнут. Их уже сейчас гораздо меньше.",
   "What a shame... we have no respect for nature anymore.": "Какой позор... мы совсем потеряли уважение к природе.",
-  "'Moonlight Jellies'... I wonder how they taste?": "Лунные медузы\"... Какие они на вкус?",
+  "'Moonlight Jellies'... I wonder how they taste?": "\"Лунные медузы\"... Какие они на вкус?",
   "I would never try it, of course!": "Но я не буду их пробовать, конечно же!",
   "You say it's raining up above? *gasp*": "Говоришь, наверху идёт дождь? *вздыхает*",
   "Rain... It's almost mythical to us. Some of us live our entire lives without ever experiencing it.": "Дождь... Для моего народа он почти легенда. Некоторые из нас старятся и умирают так и не узнав, что это такое.",
@@ -404,7 +404,7 @@
   "Don't worry about me, I never get cold...": "Не волнуйся за меня, я не когда не замерзну...",
   "Aren't you cold? Are you sure you don't want my jacket?": "Тебе не холодно? Тебе точно не дать мою куртку?",
   "I'll be rooting for you in the fishing competition.": "Я буду болеть за тебя в рыболовных соревнованиях.",
-  "I'm dreaming of our warm fire back home...": "Я мечтаю о теплом огне дома...\n",
+  "I'm dreaming of our warm fire back home...": "Я мечтаю о теплом огне дома...",
   "I know you'll beat me in the fishing competition, but I don't mind. I'm just here for the fun of it.": "Я знаю вы победите в рыболовных соревнованиях, но я не возражаю. Я просто здесь ради удовольствия.",
   "What do you think of my snow-goon?": "Как тебе мой снежный бандит?",
   "I'm sorry, but carving ice parapets requires my undivided attention!": "Прости, но когда вырезаешь парапет изо льда - нельзя ни на что отвлекаться!",
