--- a/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
+++ b/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
@@ -79,10 +79,10 @@
   "Thanks.": "Спасибо.",
   "__comment": "Penny",
   "Thank you! I really love this!": "Спасибо тебе! Мне очень нравится!",
-  "Thank you! This looks special.": "Спасибо! Это необычно выглядит.",
-  "Uh, it's for me? ...Thanks.": "Ах, это для меня? ...Спасибо.",
+  "Thank you! This looks special.": "Спасибо! Это выглядит необычно.",
+  "Uh, it's for me? ...Thanks.": "Что, это для меня? ...Спасибо.",
   "Ugh...I'm sorry, but I absolutely hate this.": "Эээ... Я извиняюсь, но я это жутко ненавижу.",
-  "Thanks, this looks nice.": "Спасибо, это выглядит красиво.",
+  "Thanks, this looks nice.": "Спасибо, это выглядит миленько.",
   "__comment": "Pam",
   "Hey, hey! Now this is really something! Thanks a million, kid.": "Эй, Эй! Теперь это - действительно что-то! Миллион благодарностей, малыш.",
   "You did good with this one, kid. Thanks!": "Ты хорошо с этим справился  в одиночку, малыш. Спасибо!!",
