--- a/MultiLanguage/languages/RU/dictionaries/_Events.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Events.json
@@ -99,7 +99,7 @@
   "Mushrooms": "Грибы",
   "Bats": "Летучие мыши",
   "Will you adopt this cat?": "Возьмете ли вы эту кошку?",
-  "Will you adopt this dog?": "\t\nВозьмете ли вы эту собаку?",
+  "Will you adopt this dog?": "Возьмете ли вы эту собаку?",
   "Do you vote for or against the 3% shipping tax?": "Ты голосуешь за или против 3% налога?",
   "For": "За",
   "Against": "Против",
@@ -189,7 +189,8 @@
   "The crystal ball has moved on... I see you in a golden room... grinning about something. Oh, I see... You're playing some kind of game and you just can't lose!": "Хрустальный шар движется... я вижу тебя в золотой комнате... ты чему то улыбаешься. О, я вижу... Ты играешь в какую то игру в которой просто не можешь проиграть!",
   "Ah... the crystal ball has gone dim. That's all I can do for you, young one.": "Эх...  хрустальный шар потух. Это все что я могу для тебя сделать.",
   "Now, just keep in mind that the future isn't set in stone! Whatever I've told you today can still be changed, if you set your heart on it. Farewell.": "Ты только учти, будущее не высечено в камне. Всё, что ты сегодня услышал может ещё изменится, если приложишь к этому усилия. Удачи.^Ты только учти, будущее не высечено в камне. Всё, что ты сегодня услышала может ещё изменится, если приложишь к этому усилия. Удачи.",
-  "Do you think everyone's ready for the egg hunt yet?": "Ты думаешь уже все готовы в охоте за яйцами?",
+  "Do you think everyone's ready for the egg hunt yet?": "Ты думаешь уже все готовы к охоте за яйцами?",
+  "Yes, let's start.": "Да, давай начинать.",
   "Well, should we start the dance now?": "Ну что, начнем танцевать сейчас?",
   "Should we move forward with the Luau? The governer seems a little hungry.": "Может нам пора подавать Люау? Губернатор похоже голоден.",
   "What do you think... should I launch the boat now?": "Что ты думаешь... запустить лодку сейчас?",
