--- a/MultiLanguage/languages/RU/dictionaries/_Game1.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Game1.json
@@ -84,5 +84,5 @@
   "Today's festival is being set up. Come back later.": "Сегодняшний праздник еще готовится. Возвращайся позже",
   "__comment key is server name, no need to translate": "__comment key is server name, no need to translate",
   "Connecting to @key...": "Подключение  к @key..",
-  "Melting Winter Snow...": "Таит зимний снег..."
+  "Melting Winter Snow...": "Тает зимний снег..."
 }
