--- a/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
+++ b/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
@@ -26,24 +26,24 @@
   "@number/@number @key caught": "@number/@number @keyR поймано",
   "__comment": "ItemDeliveryQuest.cs",
   "__comment": "Looking for a delicious @key. I'll pay you when you bring it.@newline        -@key",
-  "@key a @key @key. @key@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "@key a @key @key. @key@newline -@key@newline@newline- @numberg в процессе доставки@newline- @key",
+  "@key a @key @key. @key@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "@key @key @keyV. @key@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "Looking for": "Ищу",
-  "I'm in the market for": "Я на рыноке за",
-  "I could really go for": "Я мог бы действительно подойти для",
-  "a farm-fresh @key.": "свежо-вскопанный @key. ",
+  "I'm in the market for": "Хочу купить",
+  "I could really go for": "Я очень хочу получить ",
+  "a farm-fresh @key.": "свеже-вскопанный @key. ",
   "a delicious @key.": "вкусный @key.",
   "a ripe @key.": "спелый @key.",
   "Could a local farmer deliver one to me?": "Может ли фермер принести их мне?",
-  "I'll pay you when you bring it.": "я заплачу тебе, когда ты мне его принесешь.",
-  "I would be so happy if someone delivered one to me.": "я был бы рад, если бы кто то мне это принес.",
+  "I'll pay you when you bring it.": "Я заплачу тебе, когда ты мне его принесешь.",
+  "I would be so happy if someone delivered one to me.": "Я был бы рад, если бы кто-то мне это принес.",
   "Makes @key happy": "Сделает @keyR счастливым",
-  "@key will be thankful": "@key будет благодаерн",
+  "@key will be thankful": "@key обрадуется",
   "@key will be pleased": "@keyD будет приятно",
   "__comment": "Need an @key to serve at my afternoon tea party.@newline        -@key",
   "@key a @key to @key.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "@key @keyV. Я собираюсь @key.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "@key an @key to @key.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "@key @keyV. Я хочу @key.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I am looking for": "Я ищу",
-  "Need": "Нужно",
+  "Need": "Требуется",
   "serve at my afternoon tea party": "подать на моем послеобеденном чаепитии",
   "pair with a dry red wine this evening": "попробовать с красным сухим вином вечером",
   "enjoy with some fresh bread": "насладиться со свежим хлебом",
@@ -68,10 +68,10 @@
   "skewer on a shishkebab": "шампур для шашлыка",
   "I woke up thinking about how much I want an @key for dinner.@newlineCould someone make it for me?@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я проснулся с мыслью в голове о том, как же сильно я хочу @keyV на ужин.@newlineКто-нибудь сможет приготовить это для меня?@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I woke up thinking about how much I want a @key for dinner.@newlineCould someone make it for me?@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я проснулся с мыслью в голове о том, как же сильно я хочу @keyV на ужин.@newlineКто-нибудь сможет приготовить это для меня?@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I have a craving for a @key. Please bring one by for me.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I have a craving for an @key. Please bring one by for me.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I have an craving for a @key. Please bring one by for me.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I have an craving for an @key. Please bring one by for me.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I have a craving for a @key. Please bring one by for me.@newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline       -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I have a craving for an @key. Please bring one by for me.@newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline       -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I have an craving for a @key. Please bring one by for me.@newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline       -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I have an craving for an @key. Please bring one by for me.@newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline       -@key@newline@newline- @numberg за доставку@newline- @key",
   "Need a @key for my compost pile. Thanks.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я ищу @keyV для моей компостной кучи. Спасибо.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "Need an @key for my compost pile. Thanks.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я ищу @keyV для моей компостной кучи. Спасибо.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "SO hungry. Need @key.@newline      -@key@newline@newline- @numberg on delivery@newline- @key@newline@newline- @numberg on delivery@newline- @key": "ОЧЕНЬ хочу есть. Прошу принести @keyV.@newline -@key@newline@newline- @numberg за доставку@newline- @key@newline@newline- @numberg за доставку@newline- @key",
@@ -80,12 +80,12 @@
   "...feel like an @key for some reason. Please bring to Sebastian at 24 Mountain Road.@newline@newline- @numberg on delivery@newline- @key": "...по какой то причине хочу @key. Пожалуйста доставьте Себастьяну по адресу Горная Дорога 24.@newline@newline- @numberg за доставку @newline- @key",
   "Feeling gloomy... a @key might cheer me up.@newline     -Sebastian@newline@newline- @numberg on delivery@newline- @key": "Меня охватила печаль... @key может поднять мне настроение.@newline -Себастьян @newline@newline- @numberg за доставку@newline- @key",
   "Feeling gloomy... an @key might cheer me up.@newline     -Sebastian@newline@newline- @numberg on delivery@newline- @key": "Меня охватила печаль... @key может поднять мне настроение.@newline -Себастьян @newline@newline- @numberg за доставку@newline- @key",
-  "I need a @key for a @key I'm making. @newline     -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. @newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I need an @key for a @key I'm making. @newline     -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. @newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I need a @key for a @key I'm making. Could someone bring me one?@newline     -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто нибудь может поделится со мной этим? @newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I need an @key for a @key I'm making. Could someone bring me one?@newline     -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто нибудь может поделится со мной этим? @newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I have a craving for @key. Please bring one by for me.@newline     -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
-  "I have a craving for @key. @newline     -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I need a @key for a @key I'm making. @newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key для @key Которую я готовлю. @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
+  "I need an @key for a @key I'm making. @newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key для @key Которую я готовлю. @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
+  "I need a @key for a @key I'm making. Could someone bring me one?@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто нибудь может поделится со мной этим? @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
+  "I need an @key for a @key I'm making. Could someone bring me one?@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key, что бы приготовить @key. Кто нибудь может поделится со мной этим? @newline     -@key@newline@newline- @numberg при доставке@newline- @key",
+  "I have a craving for @key. Please bring one by for me.@newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I have a craving for @key. @newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "Looking to dissect a @key. Please deliver to Demetrius at 24 Mountain Road.@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key для проведения экспериментов. Прошу доставить Деметрию по адресу Горная Дорога 24. @newline@newline- @numberg за доставку@newline- @key",
   "Looking to dissect an @key. Please deliver to Demetrius at 24 Mountain Road.@newline@newline- @numberg on delivery@newline- @key": "Мне нужен @key для проведения экспериментов. Прошу доставить Деметрию по адресу Горная Дорога 24. @newline@newline- @numberg за доставку@newline- @key",
   "Greetings! Demetrius here. Could someone please bring me a @key?@newlineI'm studying them as part of my biological research.@newline@newline- @numberg on delivery@newline- @key": "Приветствую! Это Деметрий. Не могли бы вы принести мне @keyR?@newlineМне это необходимо для моих биологических исследований.@newline@newline- @numberg за доставку@newline- @key",
@@ -110,7 +110,7 @@
   "Hi! I need a @key for a new appetizer I'm thinking about. Drop one off at the saloon and I'll be very grateful.     -Gus@newline@newline- @numberg on delivery@newline- @key": "Привет! Я хочу заполучить @keyV для создания новой закуски. Закиньте 1 шт. в салун и я буду очень благодарен . -Гас@newline@newline- @за доставку@newline- @key",
   "Hi! I need an @key for a new appetizer I'm thinking about. Drop one off at the saloon and I'll be very grateful.     -Gus@newline@newline- @numberg on delivery@newline- @key": "Привет! Я хочу заполучить @keyV для создания новой закуски. Закиньте 1 шт. в салун и я буду очень благодарен . -Гас@newline@newline- @за доставку@newline- @key",
   "__comment": "I'd like to put a @key above the mantle. Please deliver it some time today.@newline     -@key",
-  "I'd like to put a @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу@key @key. Пожалуйста принесите мне сегодня в любое время.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
+  "I'd like to put a @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите мне сегодня в любое время.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I'd like to put an @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите мне сегодня в любое время.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "on my shelf": "положить себе на полку",
   "above the mantle": "прикрепить на накидку",
@@ -211,11 +211,11 @@
   "Ah, the @key I requested! And it's a beautiful one, too. Thank you very much, @player": "Ах, @key что я просила! Просто прекрасно! Большое спасибо тебе, @player ",
   "Bring a @key": "Принеси  @key",
   "Bring an @key": "Положи @key",
-  "That's not enough... I need @number of them.": "Этого недостаточно... мне нужно  @numbe из них.",
+  "That's not enough... I need @number of them.": "Этого недостаточно... мне нужно @number из них.",
   "@number Day": "@number День",
   "__comment": "LostItemQuest.cs",
   "You found the @key. Better return it to @key.": "Вы нашли @key. Лучше вернуть их на @key.",
-  "Return to @key.": "Вернитесь к @key.",
+  "Return to @key.": "Вернитесь к @keyR.",
   "You found it! Thank you.": "Ты нашел его! Спасибо.",
   "__comment": "Quest.cs",
   "Journal Updated": "Журнал обновлен ",
@@ -226,7 +226,7 @@
   "Hey, looks like you got the stone I asked for.@key": "Эй, похоже у тебя есть камень о котором я просила.@key",
   "Wonderful!": "Замечательно!",
   "That's a big help... thanks!": "Вот уж помог так помог... спасибо!",
-  "I am looking for someone to bring me @number @keys, @key    -Clint": "Я ищу кого-то, кто принес бы мне @number @keys, @key -Клинт",
+  "I am looking for someone to bring me @number @keys, @key    -Clint": "Я ищу кого-то, кто принес бы мне @number @keyR, @key -Клинт",
   "to aid in the understanding of local minerals.": "что бы увеличить знание о местных минералах.",
   "for inspection.": "для проверки.",
   "as part of a local geological survey.": "для местной геологоразведки.",
@@ -253,9 +253,9 @@
   "The monsters known as 'Duggies' are making a mess of the local mine! The holes they create could weaken the structural integrity of the mines. Could someone defeat @number of these creatures?": "Монстры, известные как Копатели разрушают шахту! Отверстия, которые они делают, нарушают целостность структуры шахты. Может кто-нибудь победить @number этих существ?",
   "__comment": "key variations below",
   "Wanted: Slime hunter to slay @number @key": "Требуется: Охотник на слизней для убийства @number @key",
-  "Frost Jellies in the frozen depths of the mine.": "Ледяные студни внутри ледяных глубин в местной шахте.",
-  "Red Slimes in the deep lava caverns of the local mine.": "Красные слизни внутри лавовой пещеры в местной шахте.",
-  "Green Slimes in the local mine.": "Зеленые слизни в местной шахте.",
+  "Frost Jellies in the frozen depths of the mine.": "Ледяных слизней внутри ледяных глубин в местной шахте.",
+  "Red Slimes in the deep lava caverns of the local mine.": "Красных слизней внутри лавовой пещеры в местной шахте.",
+  "Green Slimes in the local mine.": "Зеленых слизней в местной шахте.",
   "__comment": "__comment ",
   "Ah, @player! So you helped us with our slime problem? Thank you!": "Ах, @player! Так вы решили нашу проблему со слизнями? Спасибо!",
   "I hope you didn't go through too much trouble...@key": "Я надеюсь, это не доставило много хлопот...@key",
@@ -294,8 +294,8 @@
   "__comment": "WeedingQuest.cs",
   "Hiring someone to weed the entire town. Once all the weeds are gone, report to the Mayor for payment. Thanks!@newline@newline- 300g reward@newline- Everyone will like you a little more": "Найму человека для прополки города от сорняков. Когда все сорняки будут убраны, подойдите к мэру за платой. Спасибо!@newline@newline- Награда 300 монет@newline- Все станут любить тебя немножко больше.",
   "You did a great job, @! Thank you so much.": "Это было великое дело,  @! Большое спасибо тебе за помощь!",
-  "I think everyone will be happy once they see how great the town looks!": "Я думаю, что все будут рады, когда увидят, что город выглядеть гораздо лучше!",
-  "Here's your payment.": "Здесь твоя оплата.",
+  "I think everyone will be happy once they see how great the town looks!": "Я думаю, что все будут рады, когда увидят, что город выглядит гораздо лучше!",
+  "Here's your payment.": "Вот твоя оплата.",
   "@number/@number town weeds removed": "@number/@number очищено от сорняков",
   "Talk to Mr. Lewis": "Поговорить с Мистером Льюисом"
 }
