--- a/MultiLanguage/languages/RU/dictionaries/_Locations.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Locations.json
@@ -19,8 +19,8 @@
   "...*snore*...": "...*храп*...",
   "...Come back when you've got something to show me, kid": "...Возвращайся, когда будет, что показать мне малыш.",
   "Use 300 pieces of wood to fix the bridge?": "Использовать 300 дерева, чтобы починить мост?",
-  "Hmmm... With 300 pieces of wood this could be fixed.": "Хм... 300 единиц дерева хватит , чтобы это починить.",
-  "Gone fishing.^^   I'll be back tomorrow.": "Отправился на рыбалку.^^Вернусь завтра.",
+  "Hmmm... With 300 pieces of wood this could be fixed.": "Хм... 300 единиц дерева хватит, чтобы это починить..",
+  "    Gone fishing.^^   I'll be back tomorrow.": "    Отправился на рыбалку.^^   Вернусь завтра.",
   "Old Mariner: Glad the amulet worked out for ye, lad.": "Старый моряк: Я рад, что амулет сработал, парень.",
   "Old Mariner: Glad the amulet worked out for ye, miss.": "Старый моряк: Я рад, что амулет сработал, мисс.",
   "Old Mariner: Don't be shy, now. Show that amulet to the one you intend to marry.": "Старый моряк: А теперь не стесняйся. Покажи амулет своей половинке.",
