--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -20,7 +20,7 @@
   "@key's Birthday": "День рождения @keyR",
   "@key' Birthday": "День рождения @keyR",
   "Nothing is posted today.": "Сегодня нет объявлений.",
-  "Accept Quest": "Принять задание",
+  "Accept Quest": "Принять",
   "__comment Menus/BlueprintsMenu.cs": "__comment Menus/BlueprintsMenu.cs",
   "Not Enough Resources": "Не хватает ресурсов",
   "Incorrect Building Type": "Неправильный тип здания",
@@ -29,7 +29,18 @@
   "Fullness:": "Сытость:",
   "Happy:": "Счастье:",
   "Perfect!": "Замечательно!",
-  "@key Bundle": "@key Комплект",
+  "@key Bundle": "Комплект @key",
+  "Bridge Repair": "Починка моста",
+  "Glittering Boulder Removed": "Блестящий валун удалён",
+  "Minecarts Repaired": "Починка Вагонеток",
+  "Bus Repair": "Починка Автобуса",
+  "Friendship <": "Дружба <",
+  "Pantry": "Кладовая",
+  "Crafts Room": "Ремесленная комната",
+  "Fish Tank": "Аквариум",
+  "Boiler Room": "Бойлерная",
+  "Vault": "Погреб",
+  "Bulletin Board": "Доска объявлений",
   "Must be deposited at Community Center": "Должен быть отнесен в Комьюнити центр",
   "Can't demolish during construction": "Невозможно снести во время строительства",
   "Can't demolish until animals are relocated": "Невозможно снести пока животные внутри",
@@ -74,11 +85,12 @@
   "Farmer's Catalogue": "Фермерский каталог",
   "You don't have enough room in your inventory.": "Нет места в инвентаре",
   "The price is 25g per geode...@newline@newlineIt looks you can't afford it right now.": "Цена: 25g за геод...@newline@newlineПохоже сейчас ты не можешь себе это позволить.",
-  "Just place your geodes on my anvil and I'll give them a whack. @newline @newlineThe price is 25g per geode.": "Просто поместите геоды на наковальне и я их сломаю. @newline @newline Цена за 1 геод 25г.",
-  "@number-@number Damage": "\t\n@number-@number Урон",
+  "Just place your geodes on my anvil and I'll give them a whack.@newline@newlineThe price is 25g per geode.": "Просто поместите геоды на наковальне и я их сломаю. @newline @newline Цена 25g за геод.",
+  "@number-@number Damage": "@number-@number Урон",
   "+ @number @key": "+ @number @key",
-  "@number @key": "\t\n@number @key",
-  "Requires @key@newline @key": "Требуется @key@newline @key",
+  "@number @key": "@number @key",
+  "Requires @key@newline@key": "Требуется @key@newline@key",
+  "Requires @key@newline@keys": "Требуется @key@newline@key",
   "@farm Farm": "@farm Ферма",
   "Current Funds: @numberg": "Текущие средства: @numberg",
   "Total Earnings: @numberg": "Всего заработано: @numberg",
@@ -93,9 +105,10 @@
   "We    the  Junimo are    happy to    aid  you.  In     return we     ask for gifts   of      the valley.    If you   are one     with    forest   magic    then you    will   see    the true    nature   of  this scroll.": "Мы, Джунимо, очень рады помочь тебе. Взамен мы просим подарки из долины. Если ты обладаешь магией леса, ты сможешь узреть настоящую природу этого свитка.",
   "Reward: @key": "Награда: @key",
   "$ @number g enclosed": "$ приложенно @number золотых",
-  "New @key recipe:": "Открыт новый рецепт @keyR:",
+  "New @key recipe:": "Новый рецепт @keyR:",
   "'@key'": "'@key'",
   "Level @number @key": "Уровень @number @key",
+  "Level @number@newline@key": "Уровень @number@newline@key",
   "Level @number @newline  @number": "Уровень @number @newline  @number",
   "+1 Watering Can Proficiency": "+1 к владению Лейкой",
   "+1 Hoe Proficiency": "+1 к владению Мотыгой",
@@ -140,13 +153,14 @@
   "Cooldown on special moves cut in half.": "В два раза быстрей восстанавливаются все специальные движения.",
   "Critical strikes are deadly.": "Критический удар смертелен.",
   "Choose a profession:": "Выберите профессию:",
-  "New cooking recipe: @key": "Новый рецепт приготовления пищи: @key",
-  "New crafting recipe: @key": "Новый рецепт создания вещей: @key",
+  "New cooking recipe: @key": "Новый кулинарный рецепт: @key",
+  "New crafting recipe: @key": "Новый рецепт крафта: @key",
   "No Saved Games Found": "Сохраненные игры не найдены",
   "Delete File": "Удалить файл",
   "Really delete file: @key?": "Точно удалить файл: @key?",
   "Name": "Имя",
   "Farm@newlineName": "Название@newlineФермы",
+  "Farm": "Ферма",
   "Favorite@newlineThing": "Любимая@newlineВещь",
   "Direction": "Направление",
   "Animal@newlinePreference": "Любимое@newlineЖивотное",
@@ -310,7 +324,7 @@
   "Hungry? Thirsty? I've got just the thing.": "Голод? Жажда? Я могу отдать только одну вещь.",
   "Welcome to the Stardrop Saloon! What can I get ya?": "Добро пожаловать в бар Стардроп! Что я могу сделать для тебя?",
   "The caves can be dangerous. Make sure you're prepared.": "Пещеры могут быть опасны. Убедись, что ты готов.",
-  "In the market for a new sword?": "На рынке новый меч?",
+  "In the market for a new sword?": "Хочешь купить новый меч?",
   "Welcome to the adventurer's guild.": "Добро пожаловать в гильдию искателей приключений.",
   "Slay any monsters? I'll buy the loot.": "Убиваешь любых монстров? Я куплю добычу.",
   "The caves can be dangerous. How do you think I lost this eye?": "Пещеры могут быть опасны. Как я потерял глаз по твоему?",
@@ -328,6 +342,7 @@
   "@number Pickaxe Efficiency": "@number Эффективность кирки",
   "@number Health": "@number Здоровья",
   "@number Energy": "@number Энергии",
+  "@number Max Energy": "@number Максимум Энергии",
   "@number Speed": "@number Скорости",
   "@number Farming": "@number Фермерство",
   "@number Foraging": "@number Собирательство",
@@ -362,8 +377,11 @@
   "Loading": "Загрузка",
   "Winner!": "Победитель",
   "You Lose": "Вы проиграли",
-  "(single)": "(одинок(а))",
+  "(single)": "(без пары)",
   "(boyfriend)": "(парень)",
   "(girlfriend)": "(девушка)",
-  "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры"
+  "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры",
+  "__Exhausted": "Истощение",
+  "Jukebox": "Проигрыватель",
+  "- @key - @key": "- @key - @key"
 }
