--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -419,5 +419,7 @@
   "Wallpaper": "Обои",
   "Decorates the walls of one room": "Декорирует стены одной комнаты",
   "Flooring": "Напольное покрытие",
-  "Decorates the floor of one room.": "Декорирует полы одной комнаты"
+  "Decorates the floor of one room.": "Декорирует полы одной комнаты",
+  "Deluxe Pack": "Очень большой рюкзак",
+  "Large Pack": "Большой рюкзак"
 }
