--- a/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
+++ b/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
@@ -298,7 +298,7 @@
   "Clinic - Hours 9:00 AM - 3:00 PM": "Клиника - Часы работы: с 9-00 до 15-00",
   "General Store Open 9:00 AM to 6:00 PM Closed Wednesdays": "Магазин - Открыт с 9-00 до 18-00 Выходной: Среда",
   "It's old and faded...": "Надпись почти выцвела...",
-  "Our Beloved Mona": "Нашей ненаглядной Моне",
+  "\"Our Beloved Mona\"": "\"Наша любимая Мона\"",
   "Archaeology Office - Open 8:00 AM to 6:00 PM": "Музей археологии - Открыт с 8-00 до 18-00",
   "__comment Town-Fair.tbin": "__comment Town-Fair.tbin",
   "Tourist: Man... I can't take another bite of this barbecue sandwich... so stuffed.": "Турист: Слушай... я уже даже укусить этот барбекю-сэндвич не могу... так наелся.",
