--- a/MultiLanguage/languages/RU/dictionaries/schedules.json
+++ b/MultiLanguage/languages/RU/dictionaries/schedules.json
@@ -117,7 +117,7 @@
   "Don't worry, I'm using my own money to buy this.": "Не беспокойся, я куплю это на свои деньги.",
   "I wonder if Maru will get married some day?": "Интересно, Мару выйдет когда-нибудь замуж?",
   "__comment": "Pierre",
-  "I've been working hard all week. I deserve a little relaxation on a Friday night.": "Я усердно работал всю неделю, и имею право отдохнуть в пятницу вечером.\" ",
+  "I've been working hard all week. I deserve a little relaxation on a Friday night.": "Я усердно работал всю неделю, и имею право отдохнуть в пятницу вечером.",
   "__comment": "Robin",
   "We meet every week to encourage each other to stay healthy.": "Мы видимся каждую неделю, чтобы поддерживать друг друга и быть здоровым.",
   "What's a healthy young person like you doing here?": "Что такой здоровый и молодой человек делает здесь?",
