--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -80,79 +80,105 @@
   "Robin's Lost Axe": "Потерянный топор Робин",
   "Robin lost her favorite axe. The last time she remembers using it, she was cutting wood south of Marnie's ranch.": "Робин потеряла свой любимый топор. В последний раз как она помнит, что использовала его, она рубила деревья к югу от ранчо Марни.",
   "Find Robin's lost axe.": "Найти потерянный топор Робин.",
+  "Hey, you found my axe! What a relief... I almost chopped my toe off with the other one I was using. Thank you!": "Эй, вы нашли мой топор! Какое облегчение ... Я чуть не отрубила себе палец когда пользовалась другим. Спасибо!",
   "Jodi's Request": "Просьба Джоди",
   "Jodi needs a fresh cauliflower for a recipe she's making. She's asking you to bring her one.": "Джоди нужна свежая цветная капуста для рецепта который она делает. Она просит вас принести ей одну.",
   "Bring Jodi a cauliflower.": "Принести Джоди цветную капусту.",
-  "Mayor's \"Shorts\"": "Mayor's \"Штаны\"",
+  "Oh, that looks so delicious! Thank you, this is just what I wanted. It's going to be perfect for my yellow curry.": "О, это выглядит так аппетитно! Спасибо, это как раз то, что нужно. Она идеально подойдет для моего желтого карри.",
+  "Mayor's \"Shorts\"": "\"Штаны\" Мэра",
   "Mayor Lewis has lost his purple \"shorts\". He's asking you to find and return them... Discreetly.": "Мэр Льюис потерял свои фиолетовые штаны \"shorts\". Он просит Вас найти и вернуть их... Незаметно.",
   "Find and return Mayor Lewis' purple shorts.": "Найти и вернуть фиолетовые штаны Мэра Льюиса.",
+  "You found them... where? ...Oh!...Uhmm...Heh.#$b#There? I have no idea how they could've gotten there...*cough*#$b#This stays between you and me. Got it?$u": "Вы нашли их... где? ...Ох!...Уфф...Хех.#$b#There? Я понятия не имею как они могли там оказаться...*кашляет*#$b#Пусть это останется между нами. Понятно?$u",
   "Pam Is Thirsty": "Жаждущая Пэм",
   "Pam is hankerin' for a pale ale. Regular old beer won't do. You can brew one yourself if you have hops and a keg.": "Пэм очень хочет бледный эль. Регулярное старое пиво не подходит. Вы можете сварить его самостоятельно, если у вас есть хмель и бочонок.",
   "Bring Pam a pale ale.": "Дать Пэм бледный эль.",
+  "Gimme that. *slurp*... Ahh, that's the stuff.#$b#It's real nice and hoppy... notes of citrus and pine, but with a robust body to keep it grounded.#$b#Thanks, kid. This means a lot to me. I knew I could count on you.$h": "Дай мне. *глаток*... Ахх, вот это вещь.#$b#It's реально хороший и хмелевой... Ноты цитруса и сосны, но он очень крепкий и заземленный.#$b#Спасибо, малыш. Это очень много значит для меня. Я знала, что могу рассчитывать на тебя.$h",
   "Crop Research": "Crop Research",
   "Demetrius needs a fresh melon for his research.": "Деметриус нуждается в свежей дыни для его исследования.",
   "Bring Demetrius a melon.": "Принести Деметриусу дыню.",
+  "This is perfect! It's just what I need for my research. It's going to be hard not to eat it! Thanks a bunch.": "Это потрясающе! Это именно то, что нужно для моих исследований. Будет трудно не съесть его! Огромное спасибо.",
   "Knee Therapy": "Колено терапия",
   "George needs a hot pepper to soothe his aching knee.": "Джордж нуждается в остром перце, чтобы успокоить свое больное колено.",
   "Bring George a Hot Pepper.": "Отдать Джорджу острый Перец.",
+  "Took you long enough... hmmph... Well it's good and spicy at least. Thanks.": "Я ждал Вас достаточно долго... Хммм... Ну, он хороший и пряный по крайней мере. Спасибо.",
   "Cow's Delight": "Коровий восторг",
   "Marnie wants to give her cows a special treat. She's asking for a single bunch of amaranth.": "Марни хочет, чтобы коровы получили специальное угощение. Она просит одну кучу амаранта.",
   "Bring Marnie one bunch of amaranth.": "Принести Марни одну кучу амаранта.",
+  "Oh, the amaranth I asked for! Thank you so much... my cows are going to love this!$h": "Ох, амарант, я его искала! Спасибо тебе большое... моим коровам это понравится!$h",
   "Blackberry Basket": "Корзинка для ежевики",
   "It's blackberry season, but Linus can't find his basket! He's asking you to help him find it. He has no idea where it is.": "Сегодня сезон ежевики, но Лайнус не может найти свою корзинку! Он просит вас помочь ему с этим. Он понятия не имеет, где она сейчас находится.",
   "Find Linus' basket and return it to him.": "Найдите корзинку для Лайнуса и верните ему обратно.",
+  "My basket! Thank you. This means a lot to me.$h": "Моя корзинка! Спасибо. Это много значит для меня.$h",
   "Carving Pumpkins": "Резьба на тыкве",
   "Caroline wants to carve a pumpking with her daughter. She asked you to bring her one from the farm.": "Кэролайн хочет, чтобы Вы принесли тыкву для ее дочери. Она просит принести одну такую с Вашей фермы.",
   "Bring Caroline a pumpkin.": "Принести Кэролайн тыкву.",
+  "Oh, the pumpkin! It's a good one... Abigail will be so happy when she sees this. Thanks, @!$h": "Ох, тыква! А она хороша... Эбигейл будет так счастлива когда увидит ее. Спасибо, @!$h",
   "Catch A Squid": "Поймать кальмара",
   "Willy is challenging you to catch a squid. He says you can fish them from the ocean on winter nights.": "Для Вилли является сложной задачей поймать кальмара. Он говорит, что его можно поймать в океане зимней ночью.",
   "Bring Willy a squid.": "Принести Вилли кальмара.",
+  "Hey, you did it! Not bad. Not bad at all. I'm impressed.#$b#Winter's a good time to break out the old fishing rod, isn't it?": "Хей, ты сделал это! Не плохо. Совсем не плохо. Я впечатлен.#$b#Зима хорошее время, чтобы сломать старую удочку, не так ли?",
   "Clint's Attempt": "Попытка Клинта",
   "Clint wants you to give Emily an amethyst. He wants you to tell her it's from him.": "Клинт хочет, чтобы Вы дали Эмили аметист. Он хочет, чтобы Вы сказали, что он от него.",
   "Bring Emily an Amethyst.": "Отдать Эмили Аметист.",
+  "Oh, my favorite stone! You're so sweet!$h#$b#Huh? It's from who?$u#$b#Oh, you got it at Clint's? Well I don't care where you got it from, it's beautiful! Thank you! *smooch*$h": "Ох, мой любимый камень! Он такой милый!$h#$b#Хмм? А он от кого?$u#$b#Ох, он от Клинта? Ну, мне всеровно где Вы получили его, он прекрасен! Спасибо тебе! *Лижит*$h",
   "A Dark Reagent": "Темный Реагент",
   "The wizard wants you to descend into the mines and fetch him a Void Essence. He needs it for some kind of dark magic.": "Волшебник хочет, чтобы Вы спустились в шахту и принесли ему сущность пустоты. Он нуждается в ней для какой-то темной магии.",
   "Bring Wizard a Void Essence.": "Принести Волшебнику Сущность Пустоты.",
+  "Ah, you've brought it. You've earned my gratitude, and a 1000g reward. Now go.": "Ах, вы принесли его. Вы заслужили благодарность, и награду 1000g. Теперь ступай.",
   "A Favor For Clint": "Одолжение для Клинта",
   "Clint got a new hammer and he wants to test it out on a variety of metals.": "Клинт получил новый молоток, и он хочет проверить его на различные металлы.",
   "Bring Clint an Iron Bar.": "Принести Клинту железный слиток.",
+  "Hey, it's the iron bar I asked for. It looks strong... perfect.#$b#Thanks, @. I appreciate this.": "Эй, это железный слиток, я искал его. Он выглядет сильным... превосходно.#$b#Спасибо, @. Благодарю.",
   "Robin's Request": "Просьба Робин",
   "Robin wrote to you asking for some hardwood.": "Робин написала Вам, что просит какое-то тяжелое дерево.",
   "Bring Robin 10 pieces of Hardwood.": "Принести Робин 10 кусков тяжелого дерева.",
+  "Oh, you brought it! I know I can always count on you, @.$h#$b#Mmhmm... This wood is perfect. It's exactly what I need. Thanks!": "Ох, Вы принесли его! Я знала, что всегда могу рассчитывать на вас, @.$h#$b#Хмхм... Это дерево превосходно. Это именно то, что мне нужно. Спасибо!",
   "Fish Stew": "Тушеная рыба",
   "Gus wants to make fish stew, but he needs an albacore.": "Гас хочет сделать тушеную рыбу, но он нуждается в альбакоре.",
   "Bring Gus an Albacore.": "Принести Гасу Альбакор.",
+  "*sniff*...*sniff*... What's that? Something smells like albacore!#$b#Aha! You brought it! Thanks a million!": "*Нюхает*...*Нюхает*... Что, что? Пахнет чем-то похожим на альбакор!#$b#Аха! Вы принесли его! Миллион раз спасибо!",
   "Fresh Fruit": "Свежий фрукт",
   "Emily wants a taste of spring. She's asking for a fresh apricot.": "Эмили хочет почувствовать вкус весны. Она просит свежий абрикос.",
   "Bring Emily an Apricot.": "Принести Эмили Абрикос.",
+  "Oh... You followed through! Thanks, this looks delicious!$h": "Ох... Вы его нашли! Спасибо, он выгдядет вкусно!$h",
   "Granny's Gift": "Бабушкин подарок",
   "Evelyn wants to surprise her husband with a gift.": "Эвелин хочет удивить своего мужа подарком.",
   "Bring Evelyn a Leek.": "Принести Эвелин лук-порей.",
+  "Oh, thank you, dear. This leek looks delicious. George will be so happy.#$b#He loves when I make eggs with leeks for breakfast.": "Ох, Спасибо тебе, дорогуша. Этот лук-порей выглядет вкусно. Джордж будет так счастлив.#$b#Он любит когда я делаю яйца с луком-порей на завтрак.",
   "Pierre's Notice": "Объявление Пьера",
   "Pierre will pay \"top coin\" to whoever brings him a plate of sashimi. Apparently he's really craving the stuff.": "Пьер заплатит \"дорогими монетами\" тому кто принесет ему тарелку сашими. По-видимому он действительно его жаждет.",
   "Bring Pierre some Sashimi.": "Принести Пьеру Сашими.",
+  "It's about time! I was starting to get the shakes, I wanted this fish so bad. *munch*... Mmm, now that's good.#$b#Thanks, @.$h": "Время пришло! Я начинаю трясти, я надеюсь, что эта рыба не такая плохая. *жует*... Ммм, а ничего так.#$b#Спасибо, @.$h",
   "Aquatic Research": "Водные исследования",
   "Demetrius is studying the toxin levels of the local pufferfish. He'd like you to bring him one.": "Деметрий изучает уровень токсина местной рыбы Фугу. Он хотел бы, чтобы Вы принесли ему одну.",
   "Bring Demetrius a Pufferfish.": "Принести Деметрийу рыбу Фугу.",
+  "There you are. The specimen looks perfect. I'm going to get it on ice straight away. Thanks, @!": "Вот ты где. Образец выглядет отлично. Я собираюсь заморозить его сразу. Спасибо, @!",
   "A Soldier's Star": "Солдатская звезда",
   "Kent wants to give his wife a starfruit for their anniversary.": "Кент хочет дать своей жене звёздный фрукт на свой юбилей.",
   "Bring Kent a Starfruit.": "Принести Кенту звёздный фрукт.",
+  "Hey. Shhh... Don't let Jodi see.#$b#Ah, this looks juicy. She'll love it. Thank you so much.$h": "Эй. Шшш... Не дай Джоди увидить.#$b#Ах, он выглядит сочно. Она его полюбит. Спасибо тебе огромное.$h",
   "Mayor's Need": "Запрос Мэра",
   "Mayor Lewis wants truffle oil. He won't explain what it's for. Maybe it's none of your business.": "Мэр Льюис хочет трюфельное масло. Он не будет объяснять почему. Может это не твое дело.",
   "Bring Lewis a bottle of Truffle Oil.": "Принести Льюису бутылку с Трюфельным маслом.",
+  "You got the oil? Let me see...#$b#It's high quality... very slick. Great. Thank you.": "Ты принес масло? Дай взглянуть...#$b#Оно высокого качества... очень скользкое. Превосходно. Спасибо тебе.",
   "Wanted: Lobster": "Разыскивается Лобстер",
   "Gus put out a notice requesting a fresh lobster.": "Гас повесил уведомление с просьбой поймать Лобстера.",
   "Bring Gus a Lobster.": "Принести Гасу Лобстера.",
+  "Something smells like fresh lobster. Oh, that's good.$h#$b#Take care, friend.": "Что-то пахнет свежим Лобстером. Ох, это отлично.$h#$b#Береги себя, друг.",
   "Pam Needs Juice": "Пэм нуждается в соке",
   "Pam's TV Remote is dead. She's having a tough time going back and forth between the couch and the TV dial.": "Пульт от телевизора Пэм покинул этот мир. Она все время ходит взад и вперед между диваном, чтобы переключить канал самостоятельно.",
   "Bring Pam a Battery Pack.": "Принести Пэм батарейный блок.",
+  "Hey, you pulled through with the battery pack! Thanks, kid... You're a life-saver!$h": "Эй, вы принесли батарейный блок! Спасибо, малыш... Ты мой спаситель!$h",
   "Staff Of Power": "Посох могущества",
   "The Wizard is creating a staff of phenomenal power. Who knows what it's for. He needs an iridium bar to finish it.": "Волшебник создает предмет феноменальной мощности. Кто знает, что это может быть. Ему нужен слиток иридия, чтобы закончить дело.",
   "Bring Wizard an Iridium Bar.": "Принести Волшебнику Слиток иридия.",
+  "Ah, precious iridium. You've done well, @. You have my gratitude. Now, leave.": "Ах, драгоценный иридий. Вы справились отлично, @. Я даю вам свою благодарность. Теперь, ухади.",
   "Catch a Lingcod": "Поймать Терпуг",
   "Willy is challenging you to catch a Lingcod.": "Для Вилли является сложным испытанием поймать Терпуг.",
   "Bring Willy a Lingcod.": "Принести Вилли Терпуг.",
+  "Hey, that's a real lunker! You've certainly got the angler's blood in you.$h": "Эй, Вам реально везет! Внутри Вас безусловно есть кровь рыболова.$h",
   "Exotic Spirits": "Экзотические Духи",
   "Gus wants to make a Coco-no-no, but he's missing the main ingredient.": "Гас хочет сделать Коко-нет-нет, но пропал главный ингредиент для меню.",
-  "Bring Gus a Coconut.": "Принести Гасу Кокос."
+  "Bring Gus a Coconut.": "Принести Гасу Кокос.",
+  "Coconut! Now there's a soothing sight for my winter eyes.$h#$b#It's going to be perfect for my coco-no-no. Thanks!": "Кокос! Теперь есть успокаивающее зрелище для моих зимних глаз.$h#$b#Это будет идеально подходить для моего Коко-нет-нет. Спасибо!"
 }
