--- a/MultiLanguage/languages/RU/dictionaries/_Utility.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Utility.json
@@ -139,9 +139,9 @@
   "Congratulations, @player! I knew you'd win.": "Поздравляю,  @player! Я знала, что ты победишь.",
   "We all knew you were going to win, @player. @key was kind of a jerk.": "Мы все знали, что ты выиграешь, @player.  @key был придурком.",
   "Stardew Hero... I'm impressed!": "Стардью герой... я впечатлен!",
-  "It's such a great honor you received, @player! But you earned it.": "Тебе оказывают огромную честь, @player! Но ты заслужил это.",
+  "It's such a great honor you received, @player! But you earned it.": "Тебе оказывают огромную честь, @player! Но ты заслужил это.^Тебе оказывают огромную честь, @player! Но ты заслужила это.",
   "I'm so glad @key didn't win.": "Я так рада, что @key не выиграл.",
-  "You did it, @player!": "Ты сделал это, @player!\n",
+  "You did it, @player!": "Ты сделал это, @player!^Ты сделала это, @player!",
   "Good job, dude.": "Хорошая работа, чувак.",
   "Good job, @player.": "Хорошая работа, player.",
   "__comment": "getStardewHeroCelebrationEventString",
@@ -174,7 +174,7 @@
   "Unfortunately, @player was so jealous of my incredible farm that he did everything possible to drag me down!": "К сожалению, @player настолько сильно завидовал, что сделал все возможное, чтобы унизить меня!",
   "...@player.": "...@player.",
   "Congratulations, @player! You earned it with a whopping @number points!": "Поздравляем, @player! Ты заработал колоссальные @number очки!",
-  "Way to go, @player!": "Так держать, player!",
+  "Way to go, @player!": "Так держать, @player!",
   "Good job, buddy!": "Хорошая работа, приятель!",
   "__comment": "pierre says",
   "I told you my seeds would get the job done!": "Я же говорил, что мои семена сработают!",
